<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.marshmallowsocks.xkcd.activities.xkcd">
    <item
        android:id="@+id/action_alt_text"
        android:orderInCategory="100"
        android:title="@string/alt_text"
        android:icon="@drawable/xkcd_logo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_what_if"
        android:orderInCategory="100"
        android:icon="@drawable/thumb_on"
        android:title="@string/title_activity_what_if"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:icon="@drawable/heart_on"
        android:title="@string/title_activity_favorites"
        app:showAsAction="ifRoom" />
</menu>
