<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.marshmallowsocks.xkcd.activities.WhatIf">
    <item
        android:id="@+id/action_xkcd"
        android:orderInCategory="100"
        android:title="@string/app_name"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_all_what_if"
        android:orderInCategory="100"
        android:title="@string/all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
</menu>