<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marshmallowsocks.xkcd.activities.WhatIf">
    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/what_if_graph_tile">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/whatIfAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">
                <com.nightonke.boommenu.BoomMenuButton
                    android:id="@+id/bmb"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="end"
                    app:bmb_backgroundEffect="false"
                    app:bmb_frames="120"
                    app:bmb_hideDelay="0"
                    app:bmb_hideDuration="100"
                    app:bmb_rotateDegree="1080"
                    app:bmb_showDelay="0"
                    app:bmb_showDuration="200" />

                <ImageButton
                    android:id="@+id/searchButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="end"
                    android:background="@drawable/button_menu"
                    android:src="@android:drawable/ic_menu_search" />

                <com.like.LikeButton
                    android:id="@+id/likeButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="start"
                    android:scaleX="2"
                    android:scaleY="2"
                    app:like_drawable="@drawable/fa_heart_on"
                    app:unlike_drawable="@drawable/fa_heart_off" />
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>
        <include layout="@layout/content_what_if" />
        <LinearLayout
            android:id="@+id/navigationBar"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/firstButton"
                fontPath="fonts/Verdana_Regular.otf"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="0.1"
                android:background="@drawable/button"
                android:text="@string/first"
                android:textColor="@drawable/button_text"
                tools:ignore="ButtonStyle,MissingPrefix" />

            <Button
                android:id="@+id/previousButton"
                fontPath="fonts/Verdana_Regular.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="0.1"
                android:background="@drawable/button"
                android:text="@string/prev"
                android:textColor="@drawable/button_text"
                tools:ignore="ButtonStyle,MissingPrefix" />

            <Button
                android:id="@+id/randomButton"
                fontPath="fonts/Verdana_Regular.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="0.1"
                android:background="@drawable/button"
                android:text="@string/random"
                android:textColor="@drawable/button_text"
                tools:ignore="ButtonStyle,MissingPrefix" />

            <Button
                android:id="@+id/nextButton"
                fontPath="fonts/Verdana_Regular.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="0.1"
                android:background="@drawable/button"
                android:text="@string/next"
                android:textColor="@drawable/button_text"
                tools:ignore="ButtonStyle,MissingPrefix" />

            <Button
                android:id="@+id/lastButton"
                fontPath="fonts/Verdana_Regular.otf"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="0.1"
                android:background="@drawable/button"
                android:text="@string/last"
                android:textColor="@drawable/button_text"
                tools:ignore="ButtonStyle,MissingPrefix" />
        </LinearLayout>
    </RelativeLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/randomFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_gravity="bottom|end"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:visibility="gone"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:srcCompat="@mipmap/ms_dice_icon" />
</android.support.design.widget.CoordinatorLayout>
