<?xml version="1.0" encoding="utf-8"?>
<com.marshmallowsocks.xkcd.fragments.ComicScrollCarouselLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/componentHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#96A8C8"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.marshmallowsocks.xkcd.activities.msxkcd"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">
    <!--tools:showIn="@layout/activity_msxkcd"-->

    <TextView
        android:id="@+id/comicTitle"
        fontPath="fonts/xkcd.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@android:string/untitled"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/altText"
        fontPath="fonts/xkcd.otf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@android:string/untitled"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/closeOverlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingPrefix"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/interactiveComic"
        fontPath="fonts/xkcd.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="COMIC IS INTERACTIVE"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingPrefix" />

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/comicHolder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/comic_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comicTitle"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher" />


    <Button
        android:id="@+id/closeOverlay"
        fontPath="fonts/xkcd.otf"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:elevation="24dp"
        android:text="@string/close"
        android:textColor="@drawable/button_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/explainButton"
        fontPath="fonts/xkcd.otf"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/explain"
        android:textColor="@drawable/button_text"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/metadata"
        fontPath="fonts/xkcd.otf"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@android:string/untitled"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingPrefix" />

</com.marshmallowsocks.xkcd.fragments.ComicScrollCarouselLayout>

